js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-return-await-import-defer-empty-str-is-valid-assign-expr.js
async
function
f
(
)
{
return
await
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
reportCompare
(
0
0
)
;
