js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
import
.
defer
(
)
;
}
